@@ -306,6 +306,7 @@ int coreaudio_open(void *csound, csRtAudioParams *parm, DEVPARAMS *dev,int isInp
         p->Message(csound, " *** CoreAudio: open: memory allocation failure\n");
         return -1;
       }
+	  memset(dev->inbuffs[i], 0, buffbytes);
 
       if((dev->outbuffs[i] = (float *) malloc(buffbytes)) == NULL){
         free(dev->outbuffs);
@@ -317,6 +318,7 @@ int coreaudio_open(void *csound, csRtAudioParams *parm, DEVPARAMS *dev,int isInp
         p->Message(csound, " *** CoreAudio: open: memory allocation failure\n");
         return -1;
       }
+	  memset(dev->outbuffs[i], 0, buffbytes);
       dev->inused[i] = dev->outused[i] = 1;
     }
 
@@ -378,11 +380,12 @@ static int rtrecord_(void *csound, void *inbuf_, int bytes_)
 {
     DEVPARAMS *dev;
     ENVIRON   *p;
-    int       n, i, chans, cur, icount, buffitems, buffnos, *inused;
+    int       n, i, chans, cur, icount, buffitems, buffnos, *inused, usecs;
     float **ibuffs;
     /* MYFLT norm; */
-    p = (ENVIRON*) csound;
+	p = (ENVIRON*) csound;
     dev = (DEVPARAMS*) (*(p->GetRtRecordUserData(csound)));
+	usecs = (int) (1000*dev->bufframes/p->esr);
     n = bytes_ / sizeof(MYFLT);
     chans = dev->nchns;
     ibuffs = dev->inbuffs;
@@ -392,9 +395,7 @@ static int rtrecord_(void *csound, void *inbuf_, int bytes_)
     buffnos = dev->buffnos;
     buffitems = dev->bufframes*chans;
     /* norm = p->e0dbfs;  */
-
-    while(!inused[cur]) usleep(100);
-
+ 
     for(i = 0; i < n; i++){
       ((MYFLT *)inbuf_)[i] = ibuffs[cur][icount];
       icount++;
@@ -403,9 +404,9 @@ static int rtrecord_(void *csound, void *inbuf_, int bytes_)
         cur++;
         cur %= buffnos;
         icount = 0;
+		while(!inused[cur]) usleep(usecs);
       }
     } // for
-
     dev->incount = icount;
     dev->incurbuff = cur;
 
@@ -419,13 +420,14 @@ static void rtplay_(void *csound, void *outbuf_, int bytes_)
 {
     DEVPARAMS *dev;
     ENVIRON   *p;
-    int       n, i, chans, cur, ocount, buffitems, buffnos, *outused;
+    int       n, i, chans, cur, ocount, buffitems, buffnos, *outused, usecs;
     float **obuffs;
     /* MYFLT norm; */
     p = (ENVIRON*) csound;
     dev = (DEVPARAMS*) (*(p->GetRtRecordUserData(csound)));
 
     n = bytes_ / sizeof(MYFLT);
+	usecs = (int) (1000*dev->bufframes/p->esr);
     chans = dev->nchns;
     obuffs = dev->outbuffs;
     cur = dev->outcurbuff;
@@ -434,7 +436,7 @@ static void rtplay_(void *csound, void *outbuf_, int bytes_)
     buffnos = dev->buffnos;
     buffitems = dev->bufframes*chans;
     /* norm = p->e0dbfs; */
-
+	
     for(i = 0; i < n; i++){
       obuffs[cur][ocount] = (float)((MYFLT *)outbuf_)[i];
       ocount++;
@@ -443,7 +445,7 @@ static void rtplay_(void *csound, void *outbuf_, int bytes_)
         cur++;
         cur %= buffnos;
         ocount = 0;
-        while(!outused[cur]) usleep(100);
+        while(!outused[cur]) usleep(usecs);
       }
     }
 
